force-app/main/default/objects/Project__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <description
  >Contains the technologies or components that will be used to implement a solution according to the requirements.</description>
    <label>Design</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>