force-app/main/default/objects/Project__c/fields/Done__c.field-meta.xml
<CustomField>
    <fullName>Done__c</fullName>
    <description
  >Date the project was completed. This will only be updated to a new date if the status is set to a value other than Done and then updated to Done again.</description>
    <label>Done</label>
    <type>Date</type>
</CustomField>