force-app/main/default/objects/Project__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <description>Describes what this project is trying to accomplish. For example: learning X thing, improving Y process.</description>
    <label>Goal</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>