force-app/main/default/objects/Project__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description
  >Name of an icon for this project. This will be displayed in the UI next to the name of the project.

Needs to be one of the icons listed on https://lightningdesignsystem.com/icons</description>
    <inlineHelpText
  >Include the full name of the icon. For example - action:new_note, standard:account, custom:custom88
https://www.lightningdesignsystem.com/icons</inlineHelpText>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>