force-app/main/default/objects/Project__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <description>Captures notes about what happened during the implementation.</description>
    <label>Implementation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>