force-app/main/default/objects/Project__c/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <description>Completing this project will fulfill the items listed in this field. Meant to capture high-level requirements.</description>
    <label>Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>