force-app/main/default/objects/Project__c/fields/Retrospective__c.field-meta.xml
<CustomField>
    <fullName>Retrospective__c</fullName>
    <description>Summary of how the project went. Should include key takeaways. For example: What did we learn? What went well? Did anything unexpected happen?</description>
    <label>Retrospective</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>